1999-07-26  Ulrich Pfeifer  <upf@de.uu.net>

	* Site.pm: Added CPAN::Config->load call which is required by
	newer CPAN.pm

Wed May  6 13:26:13 1998  Ulrich Pfeifer  <upf@de.uu.net>

	* mkpackages: Rudimentary CHECKSUMS support

Tue May  5 12:40:27 1998  Ulrich Pfeifer  <upf@de.uu.net>

	* mkpackages (wanted): 'package' now found even if in the first
 	line of a file.

Tue Mar  3 12:45:42 1998  Ulrich Pfeifer  <upf@de.uu.net>

	* mkpackages (wanted): $VERSION is found now even if line crosses 
	  block boundary.

Tue Jan 13 11:58:31 1998  Ulrich Pfeifer  <pfeifer@wait.de>

	* mkpackages: Now removes 'id/' from path

Thu Jan  8 12:26:42 1998  Ulrich Pfeifer  <pfeifer@wait.de>

	* Makefile.PL: Ask for default URL

Wed Jan  7 20:15:54 1998  Ulrich Pfeifer  <pfeifer@wait.de>

	* mkpackages (wanted): now parses tar files to extract package
 	names and version

Revision history for Perl extension CPAN::Site.

0.01  Wed Jan  7 14:32:47 1998
	- original version; created by h2xs 1.18
