@@ -1,16 +1,16 @@
-#!/usr/local/perl-5.004_04/bin/perl
+#!/usr/bin/perl
 #                              -*- Mode: Perl -*- 
 # $Basename: mkpackages $
 # $Revision: 1.10 $
 # Author          : Ulrich Pfeifer
 # Created On      : Wed Jan  7 15:04:13 1998
 # Last Modified By: Ulrich Pfeifer
-# Last Modified On: Wed May  6 13:27:53 1998
+# Last Modified On: Sun Sep 18 19:50:54 2005
 # Language        : CPerl
-# Update Count    : 49
+# Update Count    : 56
 # Status          : Unknown, Use with caution!
 # 
-# (C) Copyright 1998, Ulrich Pfeifer, all rights reserved.
+# (C) Copyright 1998,2005 Ulrich Pfeifer, all rights reserved.
 # 
 # 
 
@@ -18,8 +18,7 @@ use strict;
 use IO::File;
 use File::Find;
 
-# $Format: "my $VERSION = sprintf '%5.3f', ($ProjectMajorVersion$ * 100 + ($ProjectMinorVersion$-1))/1000;"$
-my $VERSION = sprintf '%5.3f', (0 * 100 + (15-1))/1000;
+my $VERSION = "0.020";
 
 my $CPAN = shift;
 
@@ -65,23 +64,43 @@ sub wanted {
   return unless /\.tar\.(gz|Z)$/;
   return unless -f $_;
 
+  my $readme_file;
   if (/\.tar\.(gz|Z)$/) {
     warn "processing $File::Find::name ...\n";
-    my $fh = new IO::File "gzip -cd $File::Find::name|"
+    $readme_file = $_;
+    $readme_file =~ s/\.tar\.(gz|Z)$/\/README/;
+    warn "README file $readme_file\n" if $DEBUG;
+    my $fh = new IO::File "gzip -cd $_|"
       or die "gzip $File::Find::name: $!\n";
     my ($file, $package, $version);
     my $in_buf  = '';
     my $out_buf = '';
 
+    my $in_readme = 0;
   BLOCK:
     while ($fh->sysread($in_buf, 512)) {
       if ($in_buf =~ /^(\S*?)\0/) {
         $file = $1;
         warn "file=$file\n" if $DEBUG and length $file;
+        if ($file eq $readme_file) {
+            $in_readme = 1;
+            my $output_filename = $readme_file;
+            $output_filename =~ s/\/README$/\.readme/; # Assumes Unix paths
+            open README_FILE, ">$output_filename" ||
+               die "Could not open .readme file $output_filename $!";
+            warn "Creating README file: $output_filename\n" if $DEBUG;
+        } else {
+            $in_readme = 0;
+            close README_FILE;
+        }
         undef $package;
         undef $version;
         $out_buf = '';
         next BLOCK;
+      }
+
+      if ($in_readme) {
+          print README_FILE substr($in_buf, 0, index($in_buf, "\0"));
       }
 
       $out_buf .= $in_buf;
@@ -124,8 +143,8 @@ for my $pack (sort keys %VERSION) {
 # part2: generating checksums
 #
 
-use MD5;
-my $context = new MD5;
+use Digest::MD5;
+my $context = Digest::MD5->new;
 
 find(\&chksum, "$CPAN/authors/id");
 
@@ -189,7 +208,12 @@ extensions some day.
 This programs traverses I<pseudo_CPAN_root>F</authors/id> and
 generates I<pseudo_CPAN_root>F</site/02packages.details.txt.gz>.
 
+It also will extract a README files from TAR balls in the
+F</authors/id> directories.
+
 =head1 FILES
+
+=over
 
 =item I<pseudo_CPAN_root>F</site/02packages.details.txt.gz>
 
@@ -201,6 +225,8 @@ Generated as empty file if missing.
 
 F<CHECKSUMS> fiels are generated in al directories below
 I<pseudo_CPAN_root>F</autors/id/>.
+
+=back
 
 =head1 SEE ALSO
 
